tools/tests/errors/surf_num_08.ki
# Integer() of NaN must throw.
var m = import("math")
discard Integer(m.nan)
